# DragonBookCompiler

./: .gitignore  build.gradle.kts  settings.gradle.kts
benchmark_helper/: CMakeLists.txt  README.md  main.cpp  setup_benchmark.sh
src/main/antlr/: MainGrammar.g4  MainLexer.g4
src/main/kotlin/: CompilationFlow.kt  Main.kt  TargetArchitecture.kt
src/main/kotlin/parser/: ParserErrorListener.kt  ParserFlow.kt  ParserUtils.kt  UnderlineErrorListener.kt
src/main/kotlin/statistics/: StatsHolder.kt
src/main/kotlin/utils/: ErrorPrinter.kt  NumberUtils.kt  ProcessUtils.kt  utils.kt
src/test/kotlin/: TestResources.kt
src/test/kotlin/backend/: NativeArm64TestCompilationFlow.kt  PerformanceTestBase.kt
src/test/kotlin/ir/: CompileToIRTestBase.kt  FileBasedCompileToIRTest.kt  FileBasedStaticEvaluationTest.kt  NativeTestOptions.kt  ProtoIRInterpreter.kt  TestCompilationFlow.kt
src/test/resources/break_continue/: for_break.txt  for_continue.txt  nested_break_continue.txt  while_break.txt  while_continue.txt
src/test/resources/collatz/: simple.txt
src/test/resources/constant_propagation/: complex.txt  complex_floats.txt  compound_assignments.txt  cond_nested_if.txt  dead_branch.txt  dead_branch_floats.txt  dead_while.txt  duplicate_phi_source.txt  empty_if_else.txt  float_ifs.txt  float_precision_ops.txt  float_scientific_notation.txt  floats.txt  if_false.txt  if_false_floats.txt  if_true.txt  if_true_floats.txt  mixed_int_float_ops.txt  nested_conditions.txt  one_liner.txt  one_time_for.txt  op_rules.txt  return_branch.txt  simple_bool_ops.txt  simple_chain_1.txt  (+9 more)
(+317 files in other folders)
